# hermes-runtime

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEMO_SCRIPT.md  LICENSE  Makefile  PORTFOLIO.md  README.md  RELEASE_NOTES.md  run.sh  run_simulation.bat
.github/workflows/: ci.yml
analysis/python/: trace_analyzer.py
core/include/: hermes_api.h
core/rust/: Cargo.toml
core/rust/src/: lib.rs  main.rs
core/rust/src/mediation/: mod.rs
core/rust/src/policy/: mod.rs
core/rust/src/state/: mod.rs
demo/: README.md
demo/opaque_client/: client.c
docs/: architecture.md  syscall_model.md
integrations/n8n/: hermes-security-alert.json
intercept/c/: ptrace_core.c
intercept/seccomp/: filter.c  filter.h
scripting/lua/: policy.lua
scripting/lua/examples/: file_redirect.lua  firewall.lua
