[package]
name = "hermes_core"
version = "0.1.0"
edition = "2021"
description = "The safe mediation core for the HERMES binary runtime"

[dependencies]
libc = "0.2"
nix = "0.27"
mlua = { version = "0.9", features = ["lua54", "vendored"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
lazy_static = "1.4"
bitflags = "2.4"

[lib]
path = "src/lib.rs"

[[bin]]
name = "hermes"
path = "src/main.rs"
